syntax = "proto3";

package protocol;

option go_package = "./protos/core";

message TransferContract {
	bytes owner_address = 1;
	bytes to_address = 2;
	int64 amount = 3;
}
